@@ -22,7 +22,7 @@ This module is part of Manakai.
 package Message::Util::Formatter;
 use strict;
 use vars qw(%FMT2STR $VERSION);
-$VERSION=do{my @r=(q$Revision: 1.9 $=~/\d+/g);sprintf "%d."."%02d" x $#r,@r};
+$VERSION=do{my @r=(q$Revision: 1.10 $=~/\d+/g);sprintf "%d."."%02d" x $#r,@r};
 require Message::Util;
 
 =head1 INITIAL FORMATTING RULES
@@ -116,7 +116,8 @@ sub replace ($$;$$) {
   my $R = $self->{-option}->{return_class}->new (type => '#fragment');
   use re 'eval';
   our $BLOCK = qr/\{(?:[^\{\}]|(??{$BLOCK}))*\}/;
-  $format =~ s{%([A-Za-z0-9_-]+)(?:\(((?:[\x09\x0A\x0D\x200-9A-Za-z._=>,-]|$BLOCK|"(?:[^"\\]|\\.)*")*)\))?;|(%|[^%]+)}{
+                                        #[\x09\x0A\x0D\x200-9A-Za-z._=>,-]
+  $format =~ s{%([A-Za-z0-9_-]+)(?:\(((?:[^{}"()]|$BLOCK|"(?:[^"\\]|\\.)*")*)\))?;|(%|[^%]+)}{
       my ($f, $a, $t) = ($1, $2, $3);
       $f =~ tr/-/_/;
       $f = '-bare_text' if length $t;
@@ -292,4 +293,4 @@ Boston, MA 02111-1307, USA.
 =cut
 
 1;
-# $Date: 2003/04/29 10:39:37 $
+# $Date: 2003/05/25 10:57:26 $
