@@ -1,3 +1,7 @@
+2003-05-10  Wakaba  <w@offweb.ddo.jp>
+
+	* Formatter.pm (replace): Bug fix of pattern.
+
 2003-04-29  Wakaba  <w@offweb.ddo.jp>
 
 	* Formatter.pm (replace): {...} block is supported.
